--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.3.0",
